= Changelog
:url-repo: https://gitlab.com/antora/antora-lunr-extension

This document provides a summary of all notable changes to this project grouped by release.
For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== 1.0.0-alpha.6 (2022-03-15)

=== Fixed

* Set an identifier on section titles document (#37)
* Fix ternary condition using parenthesis

== 1.0.0-alpha.5 (2022-02-18)

=== Changed

* Use numerical identifiers in order to reduce the index size (#33)
* Disable the search bar until the index is loaded and publish an event (#34)

== 1.0.0-alpha.4 (2022-01-27)

=== Fixed

* Correctly detect custom search-scripts.hbs partial (#32)

== 1.0.0-alpha.3 (2022-01-17)

=== Fixed

* Add data directory to npm package (#31)

== 1.0.0-alpha.2 (2022-01-16)

=== Added

* Set `SITE_SEARCH_LANGUAGES` env var to a comma-separated list of languages if non-en languages are specified (#17)
* Automatically manage the search-scripts.hbs partial and remove from supplemental_ui (#17)
* Allow length of snippets in search results to be configured using `snippet_length` key (#14)

=== Changed

* Only attempt to load search stylesheet if specified in `data-stylesheet` attribute on search script (#20)
* Don't parse HTML of pages that have the `noindex` AsciiDoc attribute (#19)
* Don't parse HTML of pages not in the latest version when `index_latest_only` option is set (#23)
* Build the indexable documents in serial so the parsed HTML for only one page is held in memory at a time (#22)
* Close search on click outside search interface instead of on blur (#25)

=== Fixed

* Fix require statement for PassThrough in lazy-readable.js so it retrieves it from *stream* instead of *readable-stream* (#24)
* Publish the language support scripts as lunr-languages.js and load it into the browser, if necessary (#17)

== 1.0.0-alpha.1 (2021-12-20)

=== Added

* Initial rerelease of Antora Lunr integration as an Antora extension