@@ -57,27 +57,26 @@ function register ({ config: { languages, indexLatestOnly, snippetLength = 100, 
 function vendorJsFile (uiCatalog, logger, uiOutputDir, requireRequest, basename = requireRequest.split('/').pop()) {
   const jsVendorDir = 'js/vendor'
   const jsVendorOutputDir = uiOutputDir + '/' + jsVendorDir
-  let contents
+  let createContents
   if (Array.isArray(requireRequest)) {
     const filepaths = requireRequest.map(require.resolve)
-    contents = new LazyReadable(() => new MultiFileReadStream(filepaths))
+    createContents = () => new LazyReadable(() => new MultiFileReadStream(filepaths))
   } else {
     const filepath = require.resolve(requireRequest)
-    contents = new LazyReadable(() => fs.createReadStream(filepath))
+    createContents = () => new LazyReadable(() => fs.createReadStream(filepath))
   }
   const jsPath = jsVendorDir + '/' + basename
-  const existingFile = uiCatalog.findByType('asset').find(({ path }) => path === jsPath)
-  if (existingFile) {
+  let file = uiCatalog.findByType('asset').find(({ path }) => path === jsPath)
+  if (file) {
     logger.warn(`Please remove the following file from your UI since it is managed by ${packageName}: ${jsPath}`)
-    existingFile.contents = contents
   } else {
-    uiCatalog.addFile({
-      contents,
+    file = uiCatalog.addFile({
       type: 'asset',
       path: jsPath,
       out: { dirname: jsVendorOutputDir, path: jsVendorOutputDir + '/' + basename, basename },
     })
   }
+  Object.defineProperty(file, 'contents', { get: () => createContents() })
 }
 
 module.exports = { generateIndex, register }
