@@ -4,6 +4,12 @@
 This document provides a summary of all notable changes to this project grouped by release.
 For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.
 
+== Unreleased
+
+=== Fixed
+
+* Create stream for vendored JS file on demand to support multiple destinations (#44)
+
 == 1.0.0-alpha.6 (2022-03-15)
 
 === Fixed
